--- a/Memory_game/src/components/memoryGame.css
+++ b/Memory_game/src/components/memoryGame.css
@@ -1,23 +1,52 @@
-*{
+* {
   margin: 0%;
   padding: 0%;
 }
 
 .board {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: 50vw;
-  height: 50vh;
-  
+  grid-template-columns: repeat(5, 1fr);
+  width: 100vw;
+  height: 63vh;
 }
 
 .card {
-  margin: 7%;
-  background-color: aquamarine;
-  font-size: 50px;
+  margin: 2%;
+  background-color: purple;
+  font-size: 120px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.cardImg{
+.cardImg {
   width: 50px;
   height: 50px;
 }
+
+.gameContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.message {
+  font-size: 20px;
+}
+
+button {
+  font-size: 30px;
+  padding: 1%;
+}
+
+.gameOverMsg {
+  position: absolute;
+  top: 33%;
+  left: 38%;
+  font-size: 70px;
+}
+
